fixed broken css

--- a/sass/variables.scss
+++ b/sass/variables.scss
@@ -23,3 +23,5 @@ $testimonials-text-color: $white;
 $testimonials-opacity: 1;
 
 $main-widget-width: 100%;
+
+$font-url: '../fonts/yotpo-widget-font.eot';
